Adding batch processing JOOQ.